typescript/checker/tests/conformance/async/es5/awaitCallExpression/awaitCallExpression6_es5.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es5/awaitCallExpression/awaitCallExpression6_es5.ts
  --> $DIR/tests/conformance/async/es5/awaitCallExpression/awaitCallExpression6_es5.ts:12:1
   |
12 | / async function func(): Promise<void> {
13 | |     before();
14 | |     var b = o.fn(await p, a, a);
15 | |     after();
16 | | }
   | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            527,
        ),
        hi: BytePos(
            542,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es5/awaitCallExpression/awaitCallExpression6_es5.ts:12:22
   |
12 | async function func(): Promise<void> {
   |                      ^^^^^^^^^^^^^^^

